<resources>
    <string name="app_name">Sphere</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sphere">Сфера</string>
    <string name="ok">Ok</string>
    <string name="move">Перемещение</string>
    <string name="rotate">Поворот</string>
    <string name="scale">Масштабирование</string>
    <string name="light">Освещение</string>
    <string name="performance">Производительность</string>
    <string name="projections">Проекции</string>
    <string name="front">Front side</string>
    <string name="back">Back side</string>
</resources>
