<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_move"
            android:icon="@drawable/move"
            android:title="@string/move" />
        <item
            android:id="@+id/nav_rotate"
            android:icon="@drawable/share"
            android:title="@string/rotate" />
        <item
            android:id="@+id/nav_scale"
            android:icon="@drawable/resize"
            android:title="@string/scale" />
        <item
            android:id="@+id/nav_light"
            android:icon="@drawable/sun"
            android:title="@string/light" />
        <item
            android:id="@+id/nav_performance"
            android:icon="@drawable/wrench"
            android:title="@string/performance" />
        <item
            android:id="@+id/nav_projection"
            android:icon="@drawable/options"
            android:title="@string/projection" />
    </group>
</menu>
